--- a/Web/DinoGame_Jedrzej_Kostyk/index.html
+++ b/Web/DinoGame_Jedrzej_Kostyk/index.html
@@ -15,6 +15,8 @@
 </div>
 <div id="score">0</div>
 <canvas id="gameCanvas"></canvas>
+<audio src="jump-sound.mp3" id="jumpSound"></audio>
+<audio src="collision-sound.mp3" id="collisionSound"></audio>
 <script src="game.js"></script>
 </body>
 </html>
