further changes to dino game

--- a/Web/DinoGame_Jedrzej_Kostyk/index.html
+++ b/Web/DinoGame_Jedrzej_Kostyk/index.html
@@ -15,8 +15,9 @@
 </div>
 <div id="score">0</div>
 <canvas id="gameCanvas"></canvas>
-<audio src="jump-sound.mp3" id="jumpSound"></audio>
+<audio src="jump-sound.wav" id="jumpSound"></audio>
 <audio src="collision-sound.mp3" id="collisionSound"></audio>
+<audio src="main-menu-sound.mp3" id="mainMenuSound"></audio>
 <script src="game.js"></script>
 </body>
 </html>
