finished game i guess

--- a/Web/DinoGame_Jedrzej_Kostyk/index.html
+++ b/Web/DinoGame_Jedrzej_Kostyk/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Google Dino Game</title>
+  <title>Jumping Square Game</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -10,8 +10,9 @@
   <button id="playAgain">Play Again</button>
 </div>
 <div id="mainMenu">
-  <h1>Google Dino Game</h1>
+  <h1>Jumping Square</h1>
   <button id="startGame">Start Game</button>
+  <div id="author">by Jedrzej Kostyk</div>
 </div>
 <div id="score">0</div>
 <canvas id="gameCanvas"></canvas>
