--- a/Web/zad5/index.html
+++ b/Web/zad5/index.html
@@ -22,12 +22,12 @@
                 <div id="warning2"></div>
                 <div id="warning3"></div>
                 <div id="warning4"></div>
+                <div id="warning5"></div>
                 <label>Nazwa modelu <input type="text" name="model" id="model"></label>
                 <label>Segment <input type="text" name="segment" id="segment"></label>
                 <label>Moc <input type="text" name="moc" id="moc"></label>
                 <label>Spalanie <input type="text" name="spalanie" id='spalanie'></label>
                 <label>Pierwsza rejestracja <input type="date" name="data" id='data'></label>
-                <label>Kolor <input type="text" name="kolor" id='kolor'></label>
                 <label>
                     <label for="seria">Seria </label>
                     <select id="seria">
@@ -41,12 +41,13 @@
                         <option value="S8">S8</option>
                     </select>
                 </label>
+                <label>Cena <input type="text" name="cena" id='cena'></label>
                 <button type="button" name="addButton">Add</button>
             </div>
 
             <div class="function">
                 <div class="t">Usuń element</div>
-                <div id='usunZwierze' class="form">
+                <div id='usunSamochod' class="form">
                     <h3>Usun samochód</h3>
                     <label for="deleteCar">Model
                         <select id="deleteCar">
@@ -60,10 +61,11 @@
                 <div class="t">Modyfikuj element</div>
                 <div id="modyfikujSamochod" class="form">
                     <h3>Modyfikuj samochód</h3>
-                    <div id="warning5"></div>
                     <div id="warning6"></div>
                     <div id="warning7"></div>
                     <div id="warning8"></div>
+                    <div id="warning9"></div>
+                    <div id="warning10"></div>
                     <label for="pickCar">Samochód do edycji
                         <select id="pickCar">
                         </select>
@@ -73,7 +75,7 @@
                     <label>Moc <input type="text" name="moc" id="nowaMoc"></label>
                     <label>Spalanie <input type="text" name="spalanie" id='noweSpalanie'></label>
                     <label>Pierwsza rejestracja <input type="date" name="data" id='nowaData'></label>
-                    <label>Kolor <input type="text" name="kolor" id='nowyKolor'></label>
+                    <label>Cena <input type="text" name="cena" id='nowyCena'></label>
                     <label>
                         <label for="seria">Seria </label>
                         <select id="nowaSeria">
