--- a/Web/zad6/index.html
+++ b/Web/zad6/index.html
@@ -36,21 +36,34 @@
   </div>
 </div>
 <div class="desc">
-  <div class="box box1">
-    <p class="text">stworzyć plik xml swojej wymyślonej firmy.</p>
+  <div class="desc">
+    <div class="box box1">
+      <p class="text">
+        <strong>Zadanie 1:</strong> Stwórz plik XML dla wymyślonej firmy.
+      </p>
+    </div>
+    <div class="box box2">
+      <p class="text">
+        <strong>Zadanie 2:</strong> Stwórz plik DTD i CSS dla pliku XML z Zadania 1.
+      </p>
+    </div>
+    <div class="box box3">
+      <p class="text">
+        <strong>Zadanie 3:</strong> Stwórz pliki XSL transformujące plik XML do różnych formatów: xml, txt, svg, xhtml.
+      </p>
+    </div>
+    <div class="box box4">
+      <p class="text">
+        <strong>Zadanie 4:</strong> Stwórz własną grę w JavaScript.
+      </p>
+    </div>
+    <div class="box box5">
+      <p class="text">
+        <strong>Zadanie 5:</strong> Stwórz stronę z formularzem edycji pliku XML.
+      </p>
+    </div>
   </div>
-  <div class="box box2">
-    <p class="text">stworzyć plik DTD oraz css dla xml'a z zadania 1</p>
-  </div>
-  <div class="box box3">
-    <p class="text">stworzyć pliki xsl transformujące xml'a na odpowiednie pliki: xml, txt, svg, xhtml</p>
-  </div>
-  <div class="box box4">
-    <p class="text">stworzyć własną wymyśloną gre w javascript.</p>
-  </div>
-  <div class="box box5">
-    <p class="text">stworzyć stronę z formularzem edycji wczytanego xml</p>
-  </div>
+
 </div>
 <footer>
   <p>Jędrzej Kostyk</p>
