--- a/Web/zad6/index.html
+++ b/Web/zad6/index.html
@@ -1,37 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+<header>
+  <h1>Xml final page</h1>
+</header>
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <script defer src="scripts/script.js"></script>
   <link rel="stylesheet " href="styles/style.css" />
-  <title>Presentation Task 6</title>
+  <title>Zadanie 6</title>
 </head>
 <body>
 <div class="tasks-grid">
   <div class="tasks-flex">
     <a href="xmls/xml_zad1.xml" class="task task1">
-      <header>Task 1</header>
+      <header>Zadanie 1</header>
       <article>XML</article>
     </a>
     <a href="xmls/xml_zad2.xml" class="task task2">
-      <header>Task 2</header>
-      <article>XML + Schema + DDT</article>
+      <header>Zadanie 2</header>
+      <article>XML + DTD</article>
     </a>
     <a href="svg/svg_zad3.svg" class="task task3">
-      <header>Task 3</header>
-      <article>Transforms: xhtml, txt, xml, svg</article>
+      <header>Zadanie 3</header>
+      <article>XSL</article>
     </a>
   </div>
   <div class="tasks-flex">
     <a href="game.html" class="task task4">
-      <header>Task 4</header>
-      <article>Javascript Game</article>
+      <header>Zadanie 4</header>
+      <article>Gra Javascript</article>
     </a>
     <a href="zad5.html" class="task task5">
-      <header>Task 5</header>
-      <article>XML+JavaScript Application</article>
+      <header>Zadanie 5</header>
+      <article>Formularz edycji xml</article>
     </a>
   </div>
 </div>
